missing conf for surefire